--- a/app/assets/stylesheets/modules/nav.scss
+++ b/app/assets/stylesheets/modules/nav.scss
@@ -16,22 +16,32 @@
 }
 
 .nav.nav-server {
-  border-bottom: 1px solid darken(white, 5%);
+  border-bottom: 1px solid lighten(black, 60%);
   margin-bottom: 0;
   
   > li > a {
-    color: lighten(black, 60%);
-    line-height: lines(6);
-    padding: 0 10px;
+    color: lighten(black, 40%);
+    line-height: lines(4);
+    padding: lines(1) 10px;
+    
+    font-weight: 600;
     
     &:hover {
-      color: black;
-      background-color: $bg;
+      color: $blue;
+      background-color: transparent;
+      padding-bottom: lines(1) - 1px;
+      border-bottom: 2px solid $blue;
+      margin-bottom: -1px;
     }
   }
   
   .active > a, .active > a:hover {
-    color: $blue;
-    background-color: $bg;
+    color: lighten(black, 20%);
+    background-color: transparent;
+    
+
+    padding-bottom: lines(1) - 1px;
+    border-bottom: 2px solid lighten(black, 20%);
+    margin-bottom: -1px;
   }
 }
